# PDFxTMD

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CNAME  INSTALL  LICENSE  LICENSE.txt  README.md  appveyor.yml  build_libs.bat  install.cmake  install.md  pyproject.toml  setup.py  todo  travis-ci-minimal.yml
.PVS-Studio/State/: WindowState.json
.circleci/: config.yml
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  wheels.yml
cmake/: Doxygen.cmake  Format.cmake  Install.cmake  PDFLibConfig.cmake.in  PDFxTMDLibConfig.cmake.in  install.cmake  uninstall.cmake  version.cmake
doc/doxygen-PDFxTMDLib/: AllFlavorsShape_8h_source.html  ArchiveExtractorCommand_8h_source.html  CBilinearInterpolator_8h_source.html  CContinuationExtrapolator_8h_source.html  CDefaultLHAPDFFileReader_8h_source.html  CErrExtrapolator_8h_source.html  CGSLBicubic_8h_source.html  CGSLBilinear_8h_source.html  CNearestPointExtrapolator_8h_source.html  ConfigWrapper_8h_source.html  DownloadUrlCommand_8h_source.html  EnvUtils_8h_source.html  Exception_8h_source.html  Factory_8h_source.html  FileUtils_8h_source.html  GSLInterp2D_8h_source.html  GenericPDF_8h_source.html  ICommand_8h_source.html  IExtrapolator_8h_source.html  IInterpolator_8h_source.html  IReader_8h_source.html  InterfaceUtils_8h_source.html  KeyValueStore_8h_source.html  NumParser_8h_source.html  PDFSetDownloadHandler_8h_source.html  PDFUtils_8h_source.html  PartonUtils_8h_source.html  PathSelectionCommand_8h_source.html  RepoSelectionCommand_8h_source.html  StringUtils_8h_source.html  annotated.html  (+350 more)
examples/: AdvancedUsage_tutorial.cpp  CMakeLists.txt  CPDFSet_tutorial.cpp  QCDCoupling_tutorial.cpp  TMDSet_tutorial.cpp  Uncertainty_tutorial.cpp  cPDF_TMD_Factory_tutorial.cpp  main.cpp  python_tutorial.ipynb  python_tutorial.py  tutorial.cpp
examples/Fortran/: CMakeLists.txt  FactoryInterface.f90  FactoryInterface_mod.f90  example.f90
examples/python/: pdfset_tutorial.py  python_tutorial.ipynb  python_tutorial.py  readme-pyversion.md
include/: Factory.h  FortranFactoryWrapper.h  GenericPDF.h  ICPDF.h  IQCDCoupling.h  ITMD.h  PolyWrapper.h
install/: CPackConfig.cmake  CPackSourceConfig.cmake
performance_vs_LHAPDF_TMDLIB/: CMakeLists.txt  LHAPDF_PDFxTMDmkCPDF.cpp  LHAPDF_PDFxTMDmkCPDFSingle.cpp  PDFxTMDCollinearPDF.cpp  PDFxTMDCollinearPDFSingle.cpp  PDFxTMDTMDPDF.cpp  TMDLib_PDFxTMDmkTMD.cpp
performance_vs_LHAPDF_TMDLIB/pythonComparison/: performanceAnalyze.py  performance_config.json
performance_vs_LHAPDF_TMDLIB/pythonComparison/LHAPDF/: performance_resultsLHAPDF.csv
performance_vs_LHAPDF_TMDLIB/pythonComparison/LHAPDF_Single/: performance_resultsLHAPDFSingle.csv
performance_vs_LHAPDF_TMDLIB/pythonComparison/PDFxTMD-mkCPDF/: performance_resultsPDFxTMD_mkCPDF.csv
performance_vs_LHAPDF_TMDLIB/pythonComparison/PDFxTMD_CollinearPDF/: performance_resultsPDFxTMD_CollinearPDF.csv
performance_vs_LHAPDF_TMDLIB/pythonComparison/PDFxTMD_CollinearPDFSingle/: performance_resultsPDFxTMD_CollinearPDFSingle.csv
performance_vs_LHAPDF_TMDLIB/pythonComparison/PDFxTMD_TMDPDF/: perf-res-PDFxTMD_TMDPDF.csv
performance_vs_LHAPDF_TMDLIB/pythonComparison/PDFxTMD_mkCPDFSingle/: performance_resultsPDFxTMD_mkCPDFSingle.csv
performance_vs_LHAPDF_TMDLIB/pythonComparison/PDFxTMD_mkTMD/: perf-res-PDFxTMD_mkTMD.csv
performance_vs_LHAPDF_TMDLIB/pythonComparison/TMDLib/: perf-res-TMDLIB_KTAPI2.csv
performance_vs_LHAPDF_TMDLIB/pythonComparison/performance_results/: collinear_all_flavor_comparison.txt  collinear_all_flavor_comparison_no_outliers.txt  collinear_single_flavor_comparison.txt  collinear_single_flavor_comparison_no_outliers.txt  tmd_comparison.txt  tmd_comparison_no_outliers.txt
src/: Factory.cpp  FactoryWrapper.cpp  FortranFactoryWrapper.cpp
wheelhouse/: pdfxtmd-0.3.9-cp310-cp310-macosx_11_0_arm64.whl  pdfxtmd-0.3.9-cp310-cp310-manylinux_2_17_i686.manylinux2014_i686.whl  pdfxtmd-0.3.9-cp310-cp310-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  pdfxtmd-0.3.9-cp310-cp310-musllinux_1_2_i686.whl  pdfxtmd-0.3.9-cp310-cp310-musllinux_1_2_x86_64.whl  pdfxtmd-0.3.9-cp310-cp310-win32.whl  pdfxtmd-0.3.9-cp310-cp310-win_amd64.whl  pdfxtmd-0.3.9-cp311-cp311-macosx_11_0_arm64.whl  pdfxtmd-0.3.9-cp311-cp311-manylinux_2_17_i686.manylinux2014_i686.whl  pdfxtmd-0.3.9-cp311-cp311-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  pdfxtmd-0.3.9-cp311-cp311-musllinux_1_2_i686.whl  pdfxtmd-0.3.9-cp311-cp311-musllinux_1_2_x86_64.whl  pdfxtmd-0.3.9-cp311-cp311-win32.whl  pdfxtmd-0.3.9-cp311-cp311-win_amd64.whl  pdfxtmd-0.3.9-cp312-cp312-macosx_11_0_arm64.whl  pdfxtmd-0.3.9-cp312-cp312-manylinux_2_17_i686.manylinux2014_i686.whl  pdfxtmd-0.3.9-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  pdfxtmd-0.3.9-cp312-cp312-musllinux_1_2_i686.whl  pdfxtmd-0.3.9-cp312-cp312-musllinux_1_2_x86_64.whl  pdfxtmd-0.3.9-cp312-cp312-win32.whl  pdfxtmd-0.3.9-cp312-cp312-win_amd64.whl  pdfxtmd-0.3.9-cp313-cp313-macosx_11_0_arm64.whl  pdfxtmd-0.3.9-cp313-cp313-manylinux_2_17_i686.manylinux2014_i686.whl  pdfxtmd-0.3.9-cp313-cp313-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  pdfxtmd-0.3.9-cp313-cp313-musllinux_1_2_i686.whl  pdfxtmd-0.3.9-cp313-cp313-musllinux_1_2_x86_64.whl  pdfxtmd-0.3.9-cp313-cp313-win32.whl  pdfxtmd-0.3.9-cp313-cp313-win_amd64.whl  pdfxtmd-0.3.9-cp36-cp36m-manylinux_2_17_i686.manylinux2014_i686.whl  pdfxtmd-0.3.9-cp36-cp36m-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  pdfxtmd-0.3.9-cp36-cp36m-musllinux_1_2_i686.whl  pdfxtmd-0.3.9-cp36-cp36m-musllinux_1_2_x86_64.whl  pdfxtmd-0.3.9-cp36-cp36m-win32.whl  pdfxtmd-0.3.9-cp36-cp36m-win_amd64.whl  pdfxtmd-0.3.9-cp37-cp37m-manylinux_2_17_i686.manylinux2014_i686.whl  pdfxtmd-0.3.9-cp37-cp37m-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  pdfxtmd-0.3.9-cp37-cp37m-musllinux_1_2_i686.whl  pdfxtmd-0.3.9-cp37-cp37m-musllinux_1_2_x86_64.whl  pdfxtmd-0.3.9-cp37-cp37m-win32.whl  pdfxtmd-0.3.9-cp37-cp37m-win_amd64.whl  (+14 more)
wrappers/: CMakeLists.txt
wrappers/python/: CMakeLists.txt  bindings.cpp  pyBindings.cpp
(+180 files in other folders)
