[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp37* pp*"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-all = [
    "rm -rf build",
    "cmake -S . -B build -DCMAKE_INSTALL_PREFIX=installed -DCMAKE_BUILD_TYPE=Release -DENABLE_BUILDING_WRAPPERS=OFF",
    "cmake --build build --config Release",
    "cmake --install build"
]

[tool.cibuildwheel.windows]
before-all = [
    "build_libs.bat"
]

[tool.cibuildwheel.macos]
before-all = [
    "rm -rf build",
    "cmake -S . -B build -DCMAKE_INSTALL_PREFIX=installed -DCMAKE_BUILD_TYPE=Release -DENABLE_BUILDING_WRAPPERS=OFF -DCMAKE_OSX_ARCHITECTURES=arm64",
    "cmake --build build --config Release",
    "cmake --install build"
]