[project]
name = "pdfxtmd"
version = "1.0.1"
description = "PDFxTMD is a library for parton distribution functions (PDFs) that integrates both collinear PDFs (cPDFs) and transverse momentum-dependent PDFs (TMDs)."
authors = [
    {name = "Ramin Kord Valeshabadi", email = "raminkord92@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "examples/python/readme-pyversion.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Raminkord92/PDFxTMD"

[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp37* pp*"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-all = [
    "rm -rf build",
    "cmake -S . -B build -DCMAKE_INSTALL_PREFIX=installed -DCMAKE_BUILD_TYPE=Release -DENABLE_BUILDING_WRAPPERS=OFF",
    "cmake --build build --config Release",
    "cmake --install build"
]

[tool.cibuildwheel.windows]
before-all = [
    "build_libs.bat"
]

[tool.cibuildwheel.macos]
before-all = [
    "brew install cmake",
    "rm -rf build",
"cmake -S . -B build -DCMAKE_INSTALL_PREFIX=installed -DCMAKE_BUILD_TYPE=Release -DENABLE_BUILDING_WRAPPERS=OFF -DCMAKE_OSX_ARCHITECTURES=arm64 -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0",
    "cmake --build build --config Release",
    "cmake --install build"
]